# scif-perf-bench

./: CMakeLists.txt  Makefile  README  TODO  TUTORIAL
scripts/: bw_plot_csvs.py  gen_csvs.sh  gen_plots.sh  raw_to_csv.awk  run.sh
src/: CMakeLists.txt  MSGReceiver.cpp  MSGReceiver.h  MSGSender.cpp  MSGSender.h  Peer.h  PeerInterface.h  RMAPeer.h  Receiver.h  ReceiverInterface.h  Sender.h  SenderInterface.h  common.h  constants.h  sink.cpp  source.cpp
src/primitives/: CMakeLists.txt  MSGReceiver.cpp  MSGReceiver.h  MSGSender.cpp  MSGSender.h  RMAReceiver.cpp  RMAReceiver.h  RMASender.cpp  RMASender.h  ReadfromReceiver.cpp  ReadfromReceiver.h  VwritetoSender.cpp  VwritetoSender.h  WritetoSender.cpp  WritetoSender.h
